syntax = "proto3";

option csharp_namespace = "GrpcGameService";

service GameService {
  rpc GetGames (Empty) returns (GameList);
  rpc AddRating (GameRatingRequest) returns (GameRatingResponse);
}

message GameRatingRequest {
  int32 gameId = 1;
  int32 rating = 2;
}

message GameRatingResponse {
  bool success = 1;
  string message = 2;
}

message Empty {}

message GameRating {
  int32 id = 1;
  int32 gameId = 2;
  string ip = 3;
  int32 rating = 4;

}

message Game {
  int32 id = 1;
  string name = 2;
  int32 releaseDate = 3;
  string publisher = 4;
  string devStudio = 5;
  string platform = 6;
  string genre = 7;
  float averageRating = 8;
  
}

message GameList {
  repeated Game games = 1;
}
