syntax = "proto3";


import "add_game_request.proto";
import "delete_game_request.proto";
import "empty_message.proto";
import "game_list.proto";
import "game_rating_request.proto";
import "game_with_comments_and_rating.proto";
import "game_with_comments_and_rating_request.proto";
import "response.proto";
import "add_game_comment_request.proto";
import "delete_game_comment_request.proto";
import "update_game_comment_request.proto";
import "get_all_comments_for_game_request.proto";
import "game_comment_list.proto";
import "game_creation_presets.proto";
import "update_game_request.proto";


option csharp_namespace = "GameServiceProtos";

service GameService {
  rpc GetGames (EmptyMessage) returns (GameList);
  rpc GetGameWithCommentsAndRating(GameWithCommentsAndRatingRequest) returns (GameWithCommentsAndRating);
  rpc AddRating (GameRatingRequest) returns (Response);
  
  rpc AddGame (AddGameRequest) returns (Response);
  rpc DeleteGame (DeleteGameRequest) returns (Response);
  rpc GetGameCreationPresets (EmptyMessage) returns (GameCreationPresets);
  rpc UpdateGame (UpdateGameRequest) returns (Response);
  
  rpc AddGameComment (AddGameCommentRequest) returns (Response);
  rpc DeleteGameComment (DeleteGameCommentRequest) returns (Response);
  rpc UpdateGameComment (UpdateGameCommentRequest) returns (Response);
  rpc GetAllCommentsForGame (GetAllCommentsForGameRequest) returns (GameCommentList);
}